--- a/challenge (1)/starter/assets/css/style.css
+++ b/challenge (1)/starter/assets/css/style.css
@@ -78,6 +78,7 @@ p {
     background-position: center;
 }
 
+/* Targets image to be placed on the left*/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -89,6 +90,7 @@ p {
     margin-left: 20px;
 }
 
+/* Targets image to be place on the right.*/
 .float-right {
     float: right;
     margin-left: 25px;
@@ -102,7 +104,13 @@ p {
     color: #ffffff;
 }
 
+/* Added a class selector to target first section */
+.first {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
 
+}
 
 .online-reputation-management {
     margin-bottom: 20px;
@@ -111,6 +119,13 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+}
+
+/* Added a selector to target second section*/
+.second {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
 }
 
 .social-media-marketing {
@@ -135,14 +150,19 @@ p {
 }
 
 /* Aside */
-
+/* Added an inline block for the side to align with the rest of the rows. */ 
+/* Marging top was added to move the Benefits element to the top without affecting the bottom margin.*/
 .benefits {
+    display: inline-block;
+    vertical-align: right;
     margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
+    margin-top: -950px;
+    padding: 40px;
+    height: 140%;
+    border: 50px;
     width: 20%;
-    height: 100%;
+    float: right;
+    clear: both;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
